Bug 1604307 - Avoid passing nullptr to memcmp and memcpy even with 0 length. r=alchen

Differential Revision: https://phabricator.services.mozilla.com/D57787